--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -27,17 +27,33 @@
             <!-- begin footer -->
             <div class="footer-pagination">
                 <div class="row">
-                    <div class="col-md-6"></div>
+                    <div class="col-md-3"></div>
 
-                    <div class="col-md-6">
+                    <div class="col-md-9">
                         <div class="row">
-                            <div class="col-md-9" style="padding-left: 30%;">
+                            <div class="col-md-6" style="padding-left: 30%;">
                                 <ngb-pagination [(page)]="thePageNumber"
                                                 [pageSize]="thePageSize"
                                                 [collectionSize]="theTotalElements"
+                                                [maxSize]="5"
+                                                [boundaryLinks]="true"
+                                              
                                                 (pageChange)="listProduct()">
 
                                 </ngb-pagination>
+                            </div>
+
+                            <div class="col-md-6 mt-2" style="text-align: right;">
+                                <span class="mr-2 me-2">Page Size</span>
+
+                                <select #myPageSelect (change)="updatePageSize(myPageSelect.value)">
+                                    <option>2</option>
+                                    <option selected="true">5</option>
+                                    <option>10</option>
+                                    <option>20</option>
+                                    <option>30</option>
+                                </select>
+
                             </div>
                         </div>
                     </div>
