shopping cart status

--- a/03-frontend/angular-ecommerce/src/app/components/cart-status/cart-status.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/cart-status/cart-status.component.html
@@ -1,8 +1,8 @@
 <div class="cart-area d-n">
-    <a href="shopping-detail.html">
+    <a routerLink="cart-details">
       <div class="total">
        {{totalPrice|currency:'USD'}}<span>{{totalQuantity}}</span> 
       </div> 
-      <i class="fa fa-shopping-cart mt-3 ms-1 fs-4 text-light" aria-hidden="true"></i>
+      <i class="fa fa-shopping-cart mt-3 ms-2 fs-4 text-secondary" aria-hidden="true"></i>
     </a>
   </div>
