--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -202,7 +202,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="expirationMonth">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let month of creditCardMonth">
+                                        {{month}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -212,8 +214,10 @@
                         <div class="col-md-2">Expiration Year</div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="expirationYear">
-                                    <option>TO DO</option>
+                                <select formControlName="expirationYear" (change)="handleMonthsAndYears()">
+                                    <option *ngFor="let year of creditCardYear">
+                                        {{year}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
