--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -13,6 +13,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="firstName" type="text">
+
+                                <div *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)"
+                                    class="alert alert-danger mt-1">
+
+                                    <div
+                                        *ngIf="firstName?.errors?.['required'] || firstName?.errors?.['notOnlyWhiteSpaces']">
+                                        First Name is required
+                                    </div>
+
+                                    <div *ngIf="firstName?.errors?.['minlength']">
+                                        First Name must be at least 2 characters long
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -22,6 +35,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
+
+                                <div *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)"
+                                    class="alert alert-danger mt-1">
+
+                                    <div
+                                        *ngIf="lastName?.errors?.['required'] || lastName?.errors?.['notOnlyWhiteSpaces']">
+                                        Last Name is required
+                                    </div>
+
+                                    <div *ngIf="lastName?.errors?.['minlength']">
+                                        Last Name must be at least 2 characters long
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -31,6 +57,18 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="email" type="text">
+
+                                <div *ngIf="email?.invalid && (email?.dirty || email?.touched)"
+                                    class="alert alert-danger mt-1">
+
+                                    <div *ngIf="email?.errors?.['required']">
+                                        email is required
+                                    </div>
+
+                                    <div *ngIf="email?.errors?.['pattern']">
+                                        Email must be a valid email address format
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -49,6 +87,15 @@
                                         {{country.name}}
                                     </option>
                                 </select>
+
+                                <div *ngIf="shippingAddressCountry?.invalid && (shippingAddressCountry?.dirty || shippingAddressCountry?.touched)"
+                                    class="alert alert-danger mt-1">
+
+                                    <div *ngIf="shippingAddressCountry?.errors?.['required']">
+                                        Country is required
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -59,6 +106,18 @@
                             <div class="input-space">
                                 <input formControlName="street" type="text">
                             </div>
+
+                            <div *ngIf="shippingAddressStreet?.invalid && (shippingAddressStreet?.dirty || shippingAddressStreet?.touched)"
+                                class="alert alert-danger mt-1">
+                                <div *ngIf="shippingAddressStreet?.errors?.['required']">
+                                    Street is required
+                                </div>
+
+                                <div *ngIf="shippingAddressStreet?.errors?.['minlength']">
+                                    Street must be at least 2 characters long
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -68,6 +127,18 @@
                             <div class="input-space">
                                 <input formControlName="city" type="text">
                             </div>
+
+                            <div *ngIf="shippingAddressCity?.invalid && (shippingAddressCity?.dirty || shippingAddressCity?.touched)"
+                                class="alert alert-danger mt-1">
+                                <div *ngIf="shippingAddressCity?.errors?.['required']">
+                                    City is required
+                                </div>
+
+                                <div *ngIf="shippingAddressCity?.errors?.['minlength']">
+                                    City must be at least 2 characters long
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -80,6 +151,15 @@
                                         {{state.name}}
                                     </option>
                                 </select>
+
+                                <div *ngIf="shippingAddressState?.invalid && (shippingAddressState?.dirty || shippingAddressState?.touched)"
+                                    class="alert alert-danger mt-1">
+
+                                    <div *ngIf="shippingAddressState?.errors?.['required']">
+                                        State is required
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -91,6 +171,18 @@
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
                             </div>
+
+                            <div *ngIf="shippingAddressZipCode?.invalid && (shippingAddressZipCode?.dirty || shippingAddressZipCode?.touched)"
+                                class="alert alert-danger mt-1">
+                                <div *ngIf="shippingAddressZipCode?.errors?.['required']">
+                                    Zip Code is required
+                                </div>
+
+                                <div *ngIf="shippingAddressZipCode?.errors?.['minlength']">
+                                    Zip Code must be at least 2 characters long
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -105,7 +197,7 @@
 
                 <!-- billing address form group -->
                 <div formGroupName="billingAddress" class="form-area">
-                    <h3>Billing Address</h3>
+                    <h3>Billling Address</h3>
 
                     <div class="row">
                         <div class="col-md-2">Country</div>
@@ -116,6 +208,19 @@
                                         {{country.name}}
                                     </option>
                                 </select>
+
+                                <div *ngIf="billingAddressCountry?.invalid && (billingAddressCountry?.dirty || billingAddressCountry?.touched)"
+                                    class="alert alert-danger mt-1">
+
+                                    <div *ngIf="billingAddressCountry?.errors?.['required']">
+                                        Country is required
+                                    </div>
+
+                                    <div *ngIf="billingAddressCountry?.errors?.['minlength']">
+                                        Country must be at least 2 characters long
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -126,6 +231,18 @@
                             <div class="input-space">
                                 <input formControlName="street" type="text">
                             </div>
+
+                            <div *ngIf="billingAddressStreet?.invalid && (billingAddressStreet?.dirty || billingAddressStreet?.touched)"
+                                class="alert alert-danger mt-1">
+                                <div *ngIf="billingAddressStreet?.errors?.['required']">
+                                    Street is required
+                                </div>
+
+                                <div *ngIf="billingAddressStreet?.errors?.['minlength']">
+                                    Street must be at least 2 characters long
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -135,6 +252,18 @@
                             <div class="input-space">
                                 <input formControlName="city" type="text">
                             </div>
+
+                            <div *ngIf="billingAddressCity?.invalid && (billingAddressCity?.dirty || billingAddressCity?.touched)"
+                                class="alert alert-danger mt-1">
+                                <div *ngIf="billingAddressCity?.errors?.['required']">
+                                    City is required
+                                </div>
+
+                                <div *ngIf="billingAddressCity?.errors?.['minlength']">
+                                    City must be at least 2 characters long
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -142,11 +271,23 @@
                         <div class="col-md-2">State</div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="state" type="text">
+                                <select formControlName="state">
                                     <option *ngFor="let state of BillingAddressStates" [ngValue]="state">
                                         {{state.name}}
                                     </option>
                                 </select>
+
+                                <div *ngIf="billingAddressState?.invalid && (billingAddressState?.dirty || billingAddressState?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressState?.errors?.['required']">
+                                        State is required
+                                    </div>
+
+                                    <div *ngIf="billingAddressState?.errors?.['minlength']">
+                                        State must be at least 2 characters long
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -158,6 +299,18 @@
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
                             </div>
+
+                            <div *ngIf="billingAddressZipCode?.invalid && (billingAddressZipCode?.dirty || billingAddressZipCode?.touched)"
+                                class="alert alert-danger mt-1">
+                                <div *ngIf="billingAddressZipCode?.errors?.['required']">
+                                    Zip Code is required
+                                </div>
+
+                                <div *ngIf="billingAddressZipCode?.errors?.['minlength']">
+                                    Zip Code must be at least 2 characters long
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -233,14 +386,14 @@
                 </div>
 
 
-                
+
                 <!-- Order details -->
                 <div class="form-area">
                     <h3>Review Your Order</h3>
 
                     <p>Total Quantity: {{totalQuantity}}</p>
                     <p>Shipping: Free</p>
-                    <p>Total Price:  {{totalPrice|currency:'USD'}}</p>
+                    <p>Total Price: {{totalPrice|currency:'USD'}}</p>
                 </div>
 
                 <!-- submit button -->
