--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -327,6 +327,13 @@
                                     <option>Visa</option>
                                     <option>Mastercard</option>
                                 </select>
+
+                                <div *ngIf="creditCardType?.invalid && (creditCardType?.dirty || creditCardType?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardType?.errors?.['required']">
+                                        Card Type is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -337,6 +344,17 @@
                             <div class="input-space">
                                 <input formControlName="nameOnCard" type="text">
                             </div>
+
+                            <div *ngIf="creditCardNameOnCard?.invalid && (creditCardNameOnCard?.dirty || creditCardNameOnCard?.touched)"
+                                class="alert alert-danger mt-1">
+                                <div *ngIf="creditCardNameOnCard?.errors?.['required']">
+                                    Credit Card Name is required
+                                </div>
+
+                                <div *ngIf="creditCardNameOnCard?.errors?.['minlength']">
+                                    Name must be at least 2 characters long
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -346,6 +364,17 @@
                             <div class="input-space">
                                 <input formControlName="cardNumber" type="text">
                             </div>
+
+                            <div *ngIf="creditCardCardNumber?.invalid && (creditCardCardNumber?.dirty || creditCardCardNumber?.touched)"
+                                class="alert alert-danger mt-1">
+                                <div *ngIf="creditCardCardNumber?.errors?.['required']">
+                                    Credit Card number is required
+                                </div>
+
+                                <div *ngIf="creditCardNameOnCard?.errors?.['minlength']">
+                                    Credit Card number must be 16 digits
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -354,6 +383,18 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="securityCode" type="text">
+                            </div>
+
+
+                            <div *ngIf="creditCardSecurityCode?.invalid && (creditCardSecurityCode?.dirty || creditCardSecurityCode?.touched)"
+                                class="alert alert-danger mt-1">
+                                <div *ngIf="creditCardSecurityCode?.errors?.['required']">
+                                    Credit Card Security Code is required
+                                </div>
+
+                                <div *ngIf="creditCardNameOnCard?.errors?.['minlength']">
+                                    Credit Card Security Code must be 3 digits
+                                </div>
                             </div>
                         </div>
                     </div>
